--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto Bold', 'Open Sans Regular';
+    background-color: #E8EBE4;
 }
 
 main {
@@ -14,6 +15,7 @@ main {
     display: inline-flex;
     margin: 0;
     flex-direction: column;
+    background-color: #FFF;
 }
 
 .box {
@@ -64,6 +66,13 @@ p {
     padding: 15px;
 }
 
+button:hover {
+    color: #E8EBE4;
+}
+
+button:focus {
+    color: #cdc3e6;
+}
 /* Principal Section =DDD!! */
 
 .principal {
